# gas-balance-v2

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md
api/: CLAUDE.md  README.md  pyproject.toml
api/src/gasbalance_api/: __init__.py  config.py  dependencies.py  main.py
api/src/gasbalance_api/routers/: .gitkeep  forecasts.py  scenarios.py  series.py
api/src/gasbalance_api/schemas/: .gitkeep  common.py  forecasts.py  metrics.py  scenarios.py  series.py
api/src/gasbalance_api/services/: .gitkeep  _util.py  covariates.py  forecast_covariates.py  forecasts.py  metrics.py  observations.py  scenarios.py  series.py
api/tests/: .gitkeep  conftest.py  test_forecasts.py  test_metrics.py  test_scenarios.py  test_series.py
core/: CLAUDE.md  README.md  pyproject.toml
core/src/gasbalance_core/: .gitkeep  __init__.py  config.py  db.py  models.py
core/tests/: .gitkeep
docs/: CLAUDE.md  architecture.md  data-contracts.md  migration-from-legacy.md  runbook.md
etl/: CLAUDE.md  README.md  pyproject.toml
etl/settings/: .gitkeep
etl/src/gasbalance_etl/: __init__.py  cli.py
etl/src/gasbalance_etl/connectors/: CLAUDE.md  __init__.py  _kpler_common.py  _kpler_http.py
etl/src/gasbalance_etl/connectors/_template/: README.md
etl/src/gasbalance_etl/connectors/ce/: README.md  __init__.py  config.py  connector.py
etl/src/gasbalance_etl/connectors/ecb_fx/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/eq_coal_curve/: __init__.py  config.py  connector.py
etl/src/gasbalance_etl/connectors/eq_coal_spot/: README.md  __init__.py  config.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_actual_temps/: README.md  __init__.py  config.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_availability/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_availability_forecast/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_carbon_settles/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_carbon_spot/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_gas_forward_curve/: __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_gas_spot/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_generation_actual/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_generation_forecast/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_generation_long_term/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_long_term_temperatures/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_power_demand/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_power_demand_forecast/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_power_demand_long_term/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_power_forward_curve/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_power_spot/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/connectors/kpler_temps_forecast/: README.md  __init__.py  connector.py
etl/src/gasbalance_etl/load/: .gitkeep  __init__.py  upsert.py
etl/src/gasbalance_etl/settings/: __init__.py  ce.yaml  derived.yaml  ecb_fx.yaml  kpler_actual_temps.yaml  kpler_availability.yaml  kpler_availability_forecast.yaml  kpler_gas_forward_curve.yaml  kpler_gas_spot.yaml  kpler_generation_actual.yaml  kpler_generation_forecast.yaml  kpler_generation_long_term.yaml  kpler_long_term_temperatures.yaml  kpler_power_demand.yaml  kpler_power_demand_forecast.yaml  kpler_power_demand_long_term.yaml  kpler_power_forward_curve.yaml  kpler_power_spot.yaml  kpler_temps_forecast.yaml
etl/src/gasbalance_etl/transforms/: .gitkeep  __init__.py  carbon_curve.py  compose.py  derived.py
etl/src/gasbalance_etl/validation/: .gitkeep  __init__.py  availability.py  canonical.py  carbon.py  coal.py  coal_spot.py  demand.py  forecast_covariate.py  fx.py  gas_price.py  gas_spot.py  generation.py  identities.py  kpler_actual_temps.py  price.py  spot_price.py  temperature.py
etl/tests/: .gitkeep  test_carbon_curve.py  test_ce.py  test_compose.py  test_ecb_fx.py  test_eq_coal_curve.py  test_eq_coal_spot.py  test_kpler_actual_temps.py  test_kpler_availability.py  test_kpler_availability_forecast.py  test_kpler_carbon_settles.py  test_kpler_carbon_spot.py  test_kpler_gas_forward_curve.py  test_kpler_gas_spot.py  test_kpler_generation_actual.py  test_kpler_generation_forecast.py  test_kpler_generation_long_term.py  test_kpler_http.py  test_kpler_long_term_temperatures.py  test_kpler_power_demand.py  test_kpler_power_demand_forecast.py  test_kpler_power_demand_long_term.py  test_kpler_power_forward_curve.py  test_kpler_power_spot.py  test_kpler_temps_forecast.py
infra/: CLAUDE.md  Dockerfile.api  Dockerfile.etl  docker-compose.yml
legacy/: CLAUDE.md
ml/: CLAUDE.md  README.md  pyproject.toml
ml/experiments/: .gitkeep  series_models.yaml
ml/notebooks/: .gitkeep
ml/src/gasbalance_ml/: __init__.py  cli.py  data.py  plan.py  publish.py  registry.py
ml/src/gasbalance_ml/evaluation/: .gitkeep  __init__.py  metrics.py  walkforward.py
ml/src/gasbalance_ml/features/: .gitkeep  __init__.py  assemble.py  calendar.py
ml/src/gasbalance_ml/models/: .gitkeep  __init__.py  base.py  baseline.py  lgbm.py  static.py
ml/src/gasbalance_ml/pipelines/: .gitkeep  __init__.py  balance.py  custom.py  forecast.py  power.py  run.py  select.py
ml/src/gasbalance_ml/tuning/: .gitkeep  __init__.py  objective.py
ml/tests/: .gitkeep  test_assemble.py  test_balance.py  test_custom.py  test_forecast_publish.py  test_metrics.py  test_pipeline.py  test_plan.py  test_power.py  test_scenario_driver.py  test_select.py  test_static_models.py  test_walkforward.py
(+53 files in other folders)
