# Workspace root. Not a package itself — it declares the uv workspace and holds
# the shared tool config (ruff / mypy / pytest) for every Python member.
[project]
name = "gas-balance-v2"
version = "0.0.0"
description = "EU gas balance forecasting — monorepo (etl · ml · api), shared core."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["core", "etl", "ml", "api"]

[dependency-groups]
dev = ["ruff>=0.8", "mypy>=1.13", "pytest>=8", "pytest-cov>=5"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["core/src", "etl/src", "ml/src", "api/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["core/src", "etl/src", "ml/src", "api/src"]

# pandas/yaml/scipy ship no usable stubs — treat as untyped instead of erroring on import.
# (pandera is typed; we keep strict checking on it.)
[[tool.mypy.overrides]]
module = [
  "pandas", "pandas.*", "yaml", "scipy", "scipy.*",
  "lightgbm", "lightgbm.*", "optuna", "optuna.*", "mlflow", "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["core/tests", "etl/tests", "ml/tests", "api/tests"]
