[project]
name = "gasbalance-api"
version = "0.0.0"
description = "FastAPI service serving series & forecasts from Postgres."
requires-python = ">=3.12"
dependencies = [
  "gasbalance-core",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2",
  # sqlalchemy, psycopg, pydantic-settings, alembic all arrive via gasbalance-core.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_api"]

[tool.uv.sources]
gasbalance-core = { workspace = true }
