# Scaffold — add src/gasbalance_core/__init__.py and dependencies during implementation.
[project]
name = "gasbalance-core"
version = "0.0.0"
description = "Shared library: config, Postgres session, settings loader, logging, types."
requires-python = ">=3.12"
dependencies = [
  # e.g. pydantic, pydantic-settings, sqlalchemy, psycopg, pyyaml — added when implemented
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_core"]
