[project]
name = "gasbalance-core"
version = "0.0.0"
description = "Shared library: config, Postgres session, ORM models, types."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "pydantic-settings>=2",
  "sqlalchemy>=2",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_core"]
