# Scaffold — add src/gasbalance_etl/__init__.py, the `etl` CLI entrypoint, and deps during implementation.
[project]
name = "gasbalance-etl"
version = "0.0.0"
description = "Source-agnostic ETL: per-source connectors → validate → load to Postgres."
requires-python = ">=3.12"
dependencies = [
  "gasbalance-core",
  # e.g. pandas, pandera, httpx, sqlalchemy — added when implemented
]

# [project.scripts]
# etl = "gasbalance_etl.cli:main"   # uncomment when cli.py exists

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_etl"]

[tool.uv.sources]
gasbalance-core = { workspace = true }
