[project]
name = "gasbalance-etl"
version = "0.0.0"
description = "Source-agnostic ETL: per-source connectors → validate → load to Postgres."
requires-python = ">=3.12"
dependencies = [
  "gasbalance-core",
  "pandas>=2.2",
  "pandera>=0.20",
  "httpx>=0.27",
  "pyyaml>=6",
  # sqlalchemy + pydantic-settings come transitively via gasbalance-core
]

[project.scripts]
etl = "gasbalance_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_etl"]

[tool.uv.sources]
gasbalance-core = { workspace = true }
