# Scaffold — add src/gasbalance_ml/__init__.py, the `ml` CLI, and deps during implementation.
[project]
name = "gasbalance-ml"
version = "0.0.0"
description = "Forecasting core: model registry, features, backtesting, tuning, MLflow experiments."
requires-python = ">=3.12"
dependencies = [
  "gasbalance-core",
  "pandas",
  "numpy",
  "pyyaml>=6",  # the series -> model registry (registry.py)
  "lightgbm>=4",
  "optuna>=3",
  "mlflow>=2",
]

[project.scripts]
ml = "gasbalance_ml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasbalance_ml"]

[tool.uv.sources]
gasbalance-core = { workspace = true }
